# aoi_data_manager

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  TEST_INTEGRATION_SUMMARY.md  pyproject.toml  pytest.ini  pytest_32bit.ini  setup.py  test_32bit.bat
examples/: sql_operations_auto_disconnect_examples.py
src/aoi_data_manager/: __init__.py  api_client.py  db_models.py  file_operations.py  models.py  py.typed  schema.py  sql_operations.py
test_batch_defect/: aoi_data.db
test_batch_repair/: aoi_data.db
test_defect_lifecycle/: aoi_data.db
test_delete_defect/: aoi_data.db
test_delete_defect_not_exist/: aoi_data.db
test_delete_repair/: aoi_data.db
test_duplicate_ids/: aoi_data.db
test_get_all_defects/: aoi_data.db
test_get_by_lot/: aoi_data.db
test_get_defect_by_id/: aoi_data.db
test_insert_defect/: aoi_data.db
test_insert_defect_1760689779620/: aoi_data.db
test_insert_repair/: aoi_data.db
test_insert_repair_1760689779836/: aoi_data.db
test_multiple_records/: aoi_data.db
test_performance/: aoi_data.db
test_query_performance/: aoi_data.db
tests/: conftest.py  test_api_client.py  test_delete_operations.py  test_export_image.py  test_file_operations.py  test_merge_database.py  test_models.py  test_sql_operations.py  test_sql_operations_unified.py
