[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    # 32bit Windows対応版
    "psycopg2-binary>=2.9.0;platform_machine!='i386'",
    "psycopg2>=2.9.0;platform_machine=='i386'",
]

[project]
name = "aoi-data-manager"
version = "0.1.33"
description = "AOI defect data management library"
readme = "README.md"
license = "MIT"
authors = [
    {name = "KTEC Development Team", email = "development@ktec.com"},
]
maintainers = [
    {name = "KTEC Development Team", email = "development@ktec.com"},
]
requires-python = ">=3.8,<3.12"
dependencies = [
    # pandasの32bit対応版
    "numpy==1.24.3",
    "pandas==2.0.3",
    "requests>=2.28.0",
    # SQLAlchemyの安定版
    "sqlalchemy>=1.4.0,<2.1.0",
    "sqlmodel>=0.0.14,<0.1.0",
]
keywords = ["aoi", "defect", "management", "manufacturing", "quality", "inspection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing", 
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kent2980/aoi_defect_history"
"Bug Reports" = "https://github.com/kent2980/aoi_defect_history/issues"
"Source" = "https://github.com/kent2980/aoi_defect_history"
"Documentation" = "https://github.com/kent2980/aoi_defect_history/blob/main/aoi_data_manager/README.md"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aoi_data_manager"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/MANIFEST.in",
]
